[package]
name = "async-fn-stream"
description = "Lightweight implementation of `async-stream` without macros"
version = "0.2.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/dmitryvk/async-fn-stream"
repository = "https://github.com/dmitryvk/async-fn-stream"
keywords = ["async", "stream"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async_iterator = []

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
pin-project-lite = "0.2"

[dev-dependencies]
anyhow = "1"
futures-executor = { version = "0.3", default-features = false, features = ["std", "thread-pool"] }
tokio = { version = "1.0", features = ["full"] }
