[package]
name = "async-fn-stream"
description = "Lightweight implementation of `async-stream` without macros"
version = "0.3.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/dmitryvk/async-fn-stream"
repository = "https://github.com/dmitryvk/async-fn-stream"
keywords = ["async", "stream"]

[lints.clippy]
pedantic = "deny"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
pin-project-lite = "0.2"
smallvec = "1.15.1"

[dev-dependencies]
anyhow = "1"
async-stream = "0.3.6"
futures-executor = { version = "0.3", default-features = false, features = ["std", "thread-pool"] }
tokio = { version = "1.0", features = ["full"] }
